# sim-carrier

./: .env.repo  .gitignore  Cargo.toml  Dockerfile  Dockerfile-px4  Makefile  README.md  docker-compose.yaml
.make/: env.mk
src/: config.rs  main.rs  orders.rs  parcel.rs  telemetry.rs
worlds/: carrier.sdf
