[package]
name = "sim-carrier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14.0"
dotenv = "0.15.0"
futures-lite = "2.2"
geo = "0.28.0"
hyper = { version = "0.14", features = ["full"] }
lapin = "2.3"
packed_struct = "0.10.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.svc-telemetry-client-rest]
git = "https://github.com/aetheric-oss/svc-telemetry.git"
tag = "latest-develop"

[dependencies.svc-atc-client-rest]
git = "https://github.com/aetheric-oss/svc-atc.git"
# tag = "latest-develop"
branch = "am-smith/dw-1163/deliver-and-receive-orders"

[dependencies.svc-cargo-client-rest]
git = "https://github.com/aetheric-oss/svc-cargo.git"
tag = "latest-develop"
